FINISH WIHSLIST AND CHATING FUNCTION, CHATING INCOMPLETE(NEED ADD ONE PAGE THAT SHOW ALL MESSAGE)

--- a/app/src/main/res/layout/activity_add_wishlist.xml
+++ b/app/src/main/res/layout/activity_add_wishlist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddDonationActivity">
+    tools:context=".AddWishlistActivity">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Donate"
+                    android:text="Request"
                     android:id="@+id/request"
                     android:textSize="16sp"
                     android:layout_marginEnd="10dp"
@@ -89,34 +89,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Condition(%): "/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="15dp"
-                android:hint="90"
-                android:id="@+id/etCondition"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Description:        "/>
+                android:text="Reason:               "/>
 
             <EditText
                 android:id="@+id/etReason"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:hint="Description"
+                android:hint="Reason"
                 android:ems="10"
                 android:lines="5"
                 android:gravity="start|top"
