--- a/app/src/main/res/layout/fragment_tab2_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab2_fragment.xml
@@ -11,16 +11,22 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/btn_my"
+            android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add Donation" />
 
         <Button
-            android:id="@+id/wishlist"
+            android:id="@+id/btn_wishlist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wishlist" />
+
+        <Button
+            android:id="@+id/btn_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chat" />
 
     </LinearLayout>
 
