--- a/app/src/main/res/layout/fragment_tab3_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab3_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
         <!-- TODO: Update blank fragment layout -->
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/donatesRecyclerview"
+            android:id="@+id/wishlistRecyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
