- after accepts requester will auto reject other requests - update donate status after accept requester - display full size of image after clicked on it

--- a/app/src/main/res/layout/activity_add_donation.xml
+++ b/app/src/main/res/layout/activity_add_donation.xml
@@ -97,6 +97,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="15dp"
                 android:hint="90"
+                android:inputType="number"
                 android:id="@+id/etCondition"/>
         </LinearLayout>
 
