--- a/app/src/main/res/layout/row_donates.xml
+++ b/app/src/main/res/layout/row_donates.xml
@@ -121,28 +121,23 @@
         <Button
             android:id="@+id/requestBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@color/cardview_light_background"
-            android:drawableStart="@drawable/ic_interest"
-            android:drawableLeft="@drawable/ic_comment"
             android:drawablePadding="5dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
             android:text="Request" />
 
-        <Button
+        <ImageButton
             android:id="@+id/commentBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:layout_weight="1"
-            android:text="Comment"
-            android:drawableRight="@drawable/ic_interest"
             android:background="@color/cardview_light_background"
             android:drawablePadding="5dp"
-            android:drawableStart="@drawable/ic_comment"/>
+            android:src="@drawable/ic_comment"
+            android:scaleType="centerInside"/>
 
         </LinearLayout>
 
