--- a/app/src/main/res/layout/fragment_tab1_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab1_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tab1_fragment">
+    tools:context=".Fragment.tab1_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
