--- a/app/src/main/res/layout/fragment_tab4_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab4_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tab4_fragment">
+    tools:context=".Fragment.tab4_fragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/pullToRefresh"
