--- a/app/src/main/res/layout/fragment_tab3_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab3_fragment.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Tab3_fragment">
+    tools:context=".Fragment.Donate_fragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/pullToRefresh"
@@ -15,5 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
+
+
+<Button
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:id="@+id/btnAddDonation"
+    android:layout_gravity="bottom|end"
+    android:layout_margin="@dimen/fab_margin"
+    android:background="@drawable/round_button"
+    android:text="Add"/>
 
 </FrameLayout>
