--- a/app/src/main/res/layout/fragment_tab4_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab4_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.tab4_fragment">
+    tools:context=".Fragment.Wishlist_fragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/pullToRefresh"
@@ -17,5 +17,12 @@
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-
+    <Button
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/btnAddWishlist"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:background="@drawable/round_button"
+        android:text="Add"/>
 </FrameLayout>
