--- a/app/src/main/res/layout/fragment_tab2_fragment.xml
+++ b/app/src/main/res/layout/fragment_tab2_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.tab2_fragment">
+    tools:context=".Fragment.Message_fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
