--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:text="02/03/2019 10.23PM"
             android:textColor="@color/colorBlack"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            android:paddingLeft="10dp"/>
     </LinearLayout>
 
     <TextView
