--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -24,7 +24,8 @@
             android:layout_height="wrap_content"
             android:text="02/03/2019 10.23PM"
             android:textColor="@color/colorBlack"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            android:paddingRight="10dp"/>
 
         <TextView
             android:id="@+id/messageTv"
