--- a/app/src/main/res/layout/activity_event_post.xml
+++ b/app/src/main/res/layout/activity_event_post.xml
@@ -24,7 +24,7 @@
             android:gravity="center_vertical">
 
             <com.blogspot.atifsoftwares.circularimageview.CircularImageView
-                android:id="@+id/uPictureIv"
+                android:id="@+id/eventPosterProfilePic"
                 android:layout_width="51dp"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
