--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,46 +42,20 @@
             android:text="TextView"
             android:textAlignment="center"/>
 
-        <Button
-            android:id="@+id/btnUpdateProfileInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txtProfileEmail"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="111dp"
-            android:layout_marginBottom="8dp"
-            android:background="#00FFFFFF"
-            android:text="Update profile information"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtProfileEmail"
-            app:layout_constraintVertical_bias="0.011" />
+
+
 
         <Button
-            android:id="@+id/testBtnLogout"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnUpdateProfileInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btnUpdateProfileInfo"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="148dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="175dp"
-            android:layout_marginBottom="293dp"
-            android:background="#00FFFFFF"
-            android:text="Logout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfileInfo"
-            app:layout_constraintVertical_bias="0.01" />
+            android:text="Update Profile Information" />
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
 
     </LinearLayout>
 </FrameLayout>
