--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -99,7 +99,7 @@
         android:layout_marginTop="64dp"
         android:text="Username:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgRegisterProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/imgCreateEventImage" />
 
     <EditText
         android:id="@+id/txtRegisterUsername"
@@ -114,10 +114,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.403"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/imgRegisterProfile" />
+        app:layout_constraintTop_toBottomOf="@+id/imgCreateEventImage" />
 
     <ImageView
-        android:id="@+id/imgRegisterProfile"
+        android:id="@+id/imgCreateEventImage"
         android:layout_width="149dp"
         android:layout_height="137dp"
         android:layout_marginStart="8dp"
