--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,16 +12,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgProfilePicture"
             android:layout_width="176dp"
             android:layout_height="176dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="108dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="127dp"
             app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
 
 
@@ -43,19 +42,21 @@
             android:textAlignment="center"/>
 
 
-
-
         <Button
             android:id="@+id/btnUpdateProfileInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Update Profile Information" />
+            android:backgroundTint="@android:color/transparent"
+            android:text="Update Profile Information"
+            android:textColor="@color/colorPrimary" />
 
         <Button
             android:id="@+id/btnLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Logout" />
+            android:backgroundTint="@android:color/transparent"
+            android:text="Logout"
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 </FrameLayout>
