--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -8,11 +8,12 @@
 
     <ImageView
         android:id="@+id/imgUpdateProfilePic"
-        android:layout_width="177dp"
-        android:layout_height="188dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="108dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,60 +21,56 @@
 
     <EditText
         android:id="@+id/txtUpdateProfileName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/edit_round"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/imgUpdateProfilePic"
+        app:layout_constraintStart_toStartOf="@+id/imgUpdateProfilePic"
         app:layout_constraintTop_toBottomOf="@+id/imgUpdateProfilePic" />
 
     <EditText
         android:id="@+id/txtUpdateProfileEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="8dp"
+        android:background="@drawable/edit_round"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/txtUpdateProfileName"
+        app:layout_constraintStart_toStartOf="@+id/txtUpdateProfileName"
         app:layout_constraintTop_toBottomOf="@+id/txtUpdateProfileName" />
 
     <Button
         android:id="@+id/btnSaveProfileInformation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="108dp"
+        android:background="@drawable/custom_button"
         android:text="Save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtUpdateProfileEmail"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintEnd_toEndOf="@+id/txtUpdateProfileEmail"
+        app:layout_constraintStart_toStartOf="@+id/txtUpdateProfileEmail"
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdateProfileEmail" />
 
     <Button
         android:id="@+id/btnChangePassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/custom_button"
         android:text="Change password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfileInformation"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintEnd_toEndOf="@+id/btnSaveProfileInformation"
+        app:layout_constraintStart_toStartOf="@+id/btnSaveProfileInformation"
+        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfileInformation" />
 </android.support.constraint.ConstraintLayout>
