--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,29 +10,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
+
 
         <ImageView
             android:id="@+id/imgProfilePicture"
-            android:layout_width="176dp"
-            android:layout_height="176dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="108dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="127dp"
             app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
-
-
-
-
 
         <TextView
             android:id="@+id/txtProfileName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:layout_margin="10dp"
             android:textAlignment="center"/>
 
         <TextView
@@ -40,21 +36,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:layout_margin="10dp"
             android:textAlignment="center"/>
-
-
 
 
         <Button
             android:id="@+id/btnUpdateProfileInfo"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/custom_button"
             android:text="Update Profile Information" />
 
         <Button
             android:id="@+id/btnLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_button"
+            android:layout_margin="10dp"
             android:text="Logout" />
 
     </LinearLayout>
