--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -30,11 +30,11 @@
         app:layout_constraintTop_toBottomOf="@+id/imgProfilePicture" />
 
     <TextView
-        android:id="@+id/txtProfileEmail"
+        android:id="@+id/txtProfileWriteSomething"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Email: "
+        android:text="Write something about yourself"
         app:layout_constraintEnd_toEndOf="@+id/txtProfileName"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/txtProfileName"
@@ -48,10 +48,10 @@
         android:background="@drawable/custom_button"
         android:text="Update profile information"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtProfileEmail"
+        app:layout_constraintEnd_toEndOf="@+id/txtProfileWriteSomething"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/txtProfileEmail"
-        app:layout_constraintTop_toBottomOf="@+id/txtProfileEmail"
+        app:layout_constraintStart_toStartOf="@+id/txtProfileWriteSomething"
+        app:layout_constraintTop_toBottomOf="@+id/txtProfileWriteSomething"
         app:layout_constraintVertical_bias="0.011" />
 
     <Button
