--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,7 +32,7 @@
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/txtProfileEmail"
+            android:id="@+id/txtProfileWriteSomething"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
