fix forgot password ui error

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/btnUpdateChangedPassword"
-        android:layout_width="151dp"
-        android:layout_height="49dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -21,7 +21,7 @@
 
     <EditText
         android:id="@+id/txtNewPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:ems="10"
@@ -37,7 +37,7 @@
 
     <EditText
         android:id="@+id/txtCurrentPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
